--- a/C/16.0_Preprocessor_and_Library.md
+++ b/C/16.0_Preprocessor_and_Library.md
@@ -253,6 +253,227 @@ int main()
 
 
 ### 📌 16.5 가변 인수 매크로
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <math.h>
+
+/*
+	Variadic Macros	accept a variable number of arguments.
+*/
+
+#define PRINT(X, ...) printf("Message " #X ": " __VA_ARGS__) 
+// ... : ellipses
+// __VA_ARGS : one of the predefined macros
+
+/*
+printf(...)
+stdvar.h Variadic arguments
+*/
+
+int main()
+{
+	double x = 48;
+	double y;
+
+	y = sqrt(x);
+	PRINT(1, "x = %g\n", x); 
+	printf("Message " "1" ": " "x = %g\n", x);
+
+	PRINT(2, "x = %.2f, y = %.4f\n", x, y);
+	printf("Message " "2" ": " "x = %.2f, y = %.4f\n", x, y);
+
+	return 0;
+}
+```
+
+
+### 📌 16.6 #include와 헤더 파일
+<img width="600" src="https://github.com/user-attachments/assets/d3e7154d-95fb-4625-9967-5b27ffbb60ca"/>
+<img width="600" src="https://github.com/user-attachments/assets/4fb11d97-2862-439d-915d-87fcdd6c7a55"/>
+<img width="600" src="https://github.com/user-attachments/assets/693d0d1b-0dd6-4b31-a613-c36a848c00ec"/>
+<img width="600" src="https://github.com/user-attachments/assets/b20d2ee2-63ac-44d7-afab-6bce4aa91b72"/>
+<img width="600" src="https://github.com/user-attachments/assets/f7dba9b4-11f6-44ac-8402-fb0cecef2cb5"/>
+
+
+### 📌 16.7 조건에 따라 다르게 컴파일하기(Conditional Compilation)
+<img width="150" src="https://github.com/user-attachments/assets/f5126994-3075-4e3c-99c6-c4484c871234"/>
+
+
+### 📌 16.8 미리 정의된 매크로들, #line, #error
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+#include "DifferentFile.h"
+
+void different_function();
+
+int main()
+{
+	printf("__FILE__ : %s\n", __FILE__);
+	printf("__DATE__ %s\n", __DATE__);
+	printf("__TIME__ %s\n", __TIME__);
+	printf("__LINE__ %d\n", __LINE__);
+	printf("__func__ %s\n", __func__);
+
+	different_function();
+
+	different_func_in_different_file();
+
+	/* Not defined in VS */ 
+
+	//printf("__STDC__ %d\n", __STDC__);	// comforms to the C standard
+	//printf("__STDC_HOSTED__ %d\n", __STDC_HOSTED__); // hosted vs freestanding implementation KNK p.330
+	//printf("__STDC_VERSION__ %ld\n", __STDC_VERSION__);
+
+#line 7
+	printf("__LINE__ after #line %d\n", __LINE__);
+
+#line 1 "hello.txt"
+	printf("__LINE__ after #line %d\n", __LINE__);
+	printf("__FILE__ : %s\n", __FILE__);
+
+#if __LINE__ != 33
+#error Not line 33
+#endif
+
+#if defined(_WIN64) != 1
+#error Not WIN64 platform
+#endif
+
+#if __STDC_VERSION__ != 201112L
+#error Not C11
+#endif
+
+	return 0;
+}
+
+void different_function()
+{
+	printf("This function is %s\n", __func__);
+	printf("This is line %d\n", __LINE__);
+}
+```
+
+
+### 📌 16.9 #pragma 지시자
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+// https://docs.microsoft.com/en-us/cpp/preprocessor/pragma-directives-and-the-pragma-keyword?view=vs-2019
+
+/*
+#pragma tokens (ex: once)
+*/
+
+//#pragma pack(1)
+//_Pragma("pack(1)") // destringizing : remove first and last ", \" -> "
+//#define PACK1 _Pragma("pack(1)")
+//PACK1
+
+//#pragma warning( disable : 4477 )
+//#pragma warning( error : 4477 )
+
+struct s {
+	int i;
+	char ch;
+	double d;
+};
+
+int main()
+{
+	struct s A;
+	printf("Size of A is: %zd", sizeof(A));
+
+	return 0;
+}
+```
+
+
+### 📌 16.10 _Generic 표현식
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Generic selection expression
+	- generic programming : code is not specific to a particular type
+
+	_Generic : C11 keyword
+*/
+
+#define MYTYPE(X) _Generic((X), \
+	int: "int", \
+	float : "float", \
+	double : "double", \
+	default: "other"\
+)
+
+int main()
+{
+	int d = 5;
+	
+	//printf("%s\n", MYTYPE(d));
+	//printf("%s\n", MYTYPE(2.0*d));
+	//printf("%s\n", MYTYPE(3L));
+	//printf("%s\n", MYTYPE(&d));
+
+	return 0;
+}
+```
+
+
+### 📌 16.11 inline 함수
+<img width="600" src="https://github.com/user-attachments/assets/1a52e2b1-25bc-4bbd-a7b9-69d00bd09a49"/>
+<img width="600" src="https://github.com/user-attachments/assets/f82c97b8-26dc-415a-8668-e1e34e086284"/>
+
+<img width="386" alt="image" src="https://github.com/user-attachments/assets/b30fcf10-a48b-413b-ac94-75642c2c1d74" />
+<img width="355" alt="image" src="https://github.com/user-attachments/assets/731a9dd3-ea44-45b8-8760-3e084eacb72a" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Function call has overhead
+	- set up the call, pass arguments, jump to the function code, and return.
+
+	inline function specifier
+	- Suggests inline replacements.
+
+	Inline functions should be short.
+	A function with internal linkage can be made inline. (GCC, clang)
+	You can't take its address.
+*/
+
+inline int foo()
+{
+	return 5;
+}
+
+// Driver code 
+int main()
+{
+	int ret;
+
+	// inline function call 
+	ret = foo();
+
+	printf("Output is: %d\n", ret);
+	return 0;
+}
+```
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/358d7794-d754-47bc-add1-977094c4d2f6" />
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/848a5480-7b66-4563-844f-97a311175511" />
+
+
+### 📌 16.12 라이브러리
+
+
+
+
 
 
 
