--- a/C/16.0_Preprocessor_and_Library.md
+++ b/C/16.0_Preprocessor_and_Library.md
@@ -470,6 +470,87 @@ int main()
 
 
 ### 📌 16.12 라이브러리
+- 라이브러리 .c에는 main()가 없다.
+- release mode에서 빌드할 때도 설정을 맞춰줘야한다.  
+  release/debug mode에 따라 header file은 공통이지만 lib나 dll파일은 다르다.  
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/79ee939a-4f4e-4520-b432-6474903aae19" />
+
+
+### 📌 16.13 표준 수학 라이브러리
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+#include <math.h>
+//#include <tgmath.h>	// type generic macros
+
+int main()
+{
+	printf("%f\n", cos(3.141592));  // -1
+
+	/*
+		Pythagorean theorem
+		https://en.wikipedia.org/wiki/Pythagorean_theorem
+	*/
+
+	double c = 5.0, b = 4.0, a;  // a?
+	a = sqrt(c * c - b * b);
+	printf("a = %f\n", a);  // a = 3.000000
+
+	float cf = 5.0f, bf = 4.0f, af;
+	af = sqrtf(cf * cf - bf * bf);
+	printf("af = %f\n", af);  // af = 3.000000
+
+	return 0;
+}
+```
+``` c
+#include <stdio.h>
+#include <math.h>
+//#include <tgmath.h>
+
+//Generic Selection Expression
+#define SQRT(X) _Generic((X),\  
+	long double: sqrtl, \
+	default: sqrt, \
+	float: sqrtf)(X)
+
+
+int main()
+{
+	/*
+		Type Variants
+	*/
+
+	double t1 = SQRT(2.0f);
+	double t2 = SQRT(2.0);
+
+	if (t1 == t2)
+		printf("Identical\n");
+	else
+		printf("Not identical\n");
+
+	/*
+		tgmath.h Library
+	*/
+
+	double a1 = sqrt(2.0f);
+	double a2 = sqrt(2.0);
+
+	if (a1 == a2)
+		printf("Identical\n");
+	else
+		printf("Not identical\n");
+
+	return 0;
+}
+```
+
+
+### 📌 
+
+
+
 
 
 
