--- a/C/16.0_Preprocessor_and_Library.md
+++ b/C/16.0_Preprocessor_and_Library.md
@@ -545,33 +545,210 @@ int main()
 	return 0;
 }
 ```
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/7ff56f75-0a4d-461e-abae-f6b58c2be6db" />
 
 
-### 📌 
+### 📌 16.14 표준 유틸리티 라이브러리(Utilities)
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+/*
+	rand(), srand(), malloc(), free(), ...
+*/
+
+void goodbye(void)
+{
+	printf("Goodbye\n");
+}
+
+void thankyou(void)
+{
+	printf("Thankyou\n");
+}
+
+int main()
+{
+	printf("Purchased?\n");
+	if (getchar() == 'y')
+		atexit(thankyou);       // 2 
+
+	while (getchar() != '\n') {};
+
+	printf("Goodbye message ?\n");
+	if (getchar() == 'y')
+		atexit(goodbye);       // 1 >>>> Last-In-First-Out
+
+	/*
+		exit(0);
+	*/
+
+	/*
+		qsort();
+	*/
+
+	/*
+		_Noreturn;    // 마지막에 여기 함수에서 끝난다.
+	*/
+
+	return 0;
+}
+```
 
 
+### 📌 16.15 assert 라이브러리
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <assert.h>
+
+//#include <limits.h>
+//_Static_assert(CHAR_BIT == 16, "16-bit char falsely assumed");
+
+int divide(int a, int b);
+
+int main()
+{
+	int a, b;
+	int f = scanf("%d%d", &a, &b);
+
+	printf("a / b = %d", divide(a, b));
+
+	return 0;
+}
+
+int divide(int a, int b)
+{
+        // 문제가 발생할 염려가 되는 곳에서는 if로 막기보다는 assert로 확인.
+        // _Static_assert도 있음.
+	assert(b != 0);   // release mode에서는 무시됨.
+
+	// if (b == 0) {
+	//    printf("Cannot divide\n");
+	//	  exit(1);
+	//}
+
+	return a / b;
+}
+```
 
 
+### 📌 16.16 memcpy()와 memmove()
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h> // memcpy(), memmove()
+
+#define LEN  6
+
+void prt(int* arr, int n)
+{
+	for (int i = 0; i < n; ++i)
+		printf("%d ", arr[i]);
+	printf("\n");
+}
+
+int main()
+{
+	/*
+	- overlapping region
+	- pointer-to-void (datatype is unknown)
+	*/
+
+	int arr1[LEN] = { 1, 3, 5, 7, 9, 11 };
+	//int arr2[LEN] = { 0, };
+	int* arr2 = (int*)malloc(LEN * sizeof(int));
+	if (arr2 == NULL) exit(1);
+
+	for (int i = 0; i < LEN; ++i)
+		arr2[i] = arr1[i];
+
+	memcpy(arr2, arr1, sizeof(int) * LEN);
+	prt(arr2, LEN);
+
+	/*
+	{ 1, 3, 5, 7, 9, 11 }
+	{ 5, 7, 9, 11, 9, 11}
+	*/
+	// 복사와 붙혀넣기 영역이 겹치면 문제가 생기므로, memmove.
+	//memcpy(arr1, &arr1[2], sizeof(int) * 4);// undefined behavior
+	memmove(arr1, &arr1[2], sizeof(int) * 4);
+	prt(arr1, LEN);
+
+	return 0;
+}
+```
 
 
+### 📌 16.17 가변 인수(Variable Argument)
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <string.h>
+#include <stdarg.h>// Variable Arguments
 
+/*
+Variable Arguments
+- int printf(char const* const _Format, ...);
 
+1. Provide a function prototype using an ellipsis
 
+void   vaf1(int n, ...); // OK
+int    vaf2(const char * s, int k, ...); // OK
+char   vaf3(char c1, ..., char c2); // Not OK, ellipsis should be the last.
+double vaf4(...); // Not OK, no parameter.
 
+2. Create a va_list type variable in the function definition
+3. Use a macro to initialize the variable to an argument list.
+4. Use a macro to access the argument list.
+*/
 
+double average(int, ...);
+double average2(char* format_string, ...);
 
+int main()
+{
+	double a, b;
 
+	/*a = average(2, 1.1, 2.2, 3.3);
+	b = average(6, 1.1, 2.2, 3.3, 4.4, 5.5, 6.6);*/
+	a = average2("d", 1.1, 2.2, 3.3);
+	b = average2("ddd", 1.1, 2.2, 3.3, 4.4, 5.5, 6.6);
 
+	printf("%lf\n%lf\n", a, b);
 
+	return 0;
+}
 
+double average(int num, ...)
+{
+	va_list ap;
+	double sum = 0.0;
+	int i;
 
+	va_start(ap, num);
+	for (i = 0; i < num; i++)
+		sum += va_arg(ap, double);
+	va_end(ap);
 
+	return sum / (double)num;
+}
 
+double average2(char* format_string, ...)
+{
+	int num = strlen(format_string);
 
+	va_list ap;
+	double sum = 0.0;
+	int i;
 
+	va_start(ap, format_string);
+	for (i = 0; i < num; i++)
+		sum += va_arg(ap, double);
+	va_end(ap);
 
-
-
-
-
-### 📌 
+	return sum / (double)num;
+}
+```
